Fixed alignment and space

--- a/nhl.css
+++ b/nhl.css
@@ -42,8 +42,6 @@
 }
 
 
-
-
 /* This next section make the score boxes at the top smaller so less scrolling is necessary */
 
 
@@ -62,7 +60,7 @@
 /* Reduce score text size*/
 .nhl-scores--horizontal .g5-component--nhl-scores .g5-component--nhl-scores__team-score {
     font-size: 12px;
-    width: 7px;
+    width: 11px;
 }
 
 /* Reduce margin between game boxes*/
@@ -94,6 +92,7 @@
 /* Make the teams names text smaller */
 .g5-component--nhl-scores__team-name-abbrev {
     font-size: 11px;
+    line-height: 2;
     text-align: center;
 }
 
